# MediaElch

./: MediaElch.pro
src/: CMakeLists.txt
src/scrapers/: ScraperConfiguration.h
src/scrapers/image/: CMakeLists.txt  LocalImages.cpp  LocalImages.h
src/scrapers/movie/: CMakeLists.txt
src/scrapers/movie/theporndb/: CMakeLists.txt  ThePornDbApi.cpp  ThePornDbApi.h  ThePornDbMovie.cpp  ThePornDbMovie.h  ThePornDbMovieConfiguration.cpp  ThePornDbMovieConfiguration.h  ThePornDbMovieScrapeJob.cpp  ThePornDbMovieScrapeJob.h  ThePornDbMovieSearchJob.cpp  ThePornDbMovieSearchJob.h
src/ui/image/: ImageDialog.cpp
src/ui/scrapers/: CMakeLists.txt  ScraperManager.cpp
src/ui/scrapers/movie/: ThePornDbMovieConfigurationView.cpp  ThePornDbMovieConfigurationView.h
